<resources>
    <string name="app_name">Cobaco BMS</string>
    <string name="SharedPreferencesName">mySetting</string>
    <string name="Authentication">IsAuthenticated</string>
    <string name="theme_color">ThemeColor</string>
    <string name="isDefault_theme">IsDefaultTheme</string>
    <string name="help_startup">می توانید با کلیک روی ستاره ها به محصول امتیاز بدهید.</string>
    <string name="help_cancel">عدم نمایش</string>
    <string name="show_Help">true</string>
    <string name="show_help_status">true</string>
    <string name="TwoColumn">Grid</string>
    <string name="OneColumn">List</string>
    <string name="InfoActivityTitle">درباره ما</string>
    <string name="AboutUsCaption">درباره ما</string>
    <string name="ContactUsCaption">تماس با ما</string>
    <string name="Location">نقشه</string>
    <string name="ReturnButtonCaption">Back</string>
    <string name="helper_username">Atleast 3 char</string>
    <string name="helper_mobile">+98 --- --- ----</string>
    <string name="helper_password">Atleast 6 char</string>
    <string name="MyMobile">09127036460</string>
    <string name="CompanyTele">02188850534</string>
    <string name="catalog">کاتالوگ محصولات</string>
    <string name="clip">کلیپ معرفی کوباکو</string>
    <string name="ExhibitionClip">کلیپ نمایشگاه ساختمان</string>
    <string name="search_hint">جستجو</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="UserName">UserName</string>
    <string name="UserMobile">Mobile</string>
    <string name="UserPassword">Password</string>
    <string name="OnlyWifi">OnlyWifi</string>
    <string name="title_activity_maps">Map</string>
    <string name="listPosition">listPosition</string>
    <string name="longitude">longitude</string>
    <string name="latitude">latitude</string>
</resources>