<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    tools:context=".ui.DownloadActivity">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        app:cardElevation="2dp"
        app:strokeColor="@color/stroke_color"
        app:strokeWidth="1dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvTitle"
                style="@style/ProductName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="دانلود فایل ها" />

            <Button
                android:id="@+id/btnCatalog"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvTitle"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/margin_top_et"
                android:drawableRight="@drawable/ic_baseline_get_app_24"
                android:onClick="btnDownloadClick"
                android:paddingRight="20dp"
                android:text="@string/catalog" />

            <Button
                android:id="@+id/btnClip"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnCatalog"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/margin_top_et"
                android:drawableRight="@drawable/ic_baseline_get_app_24"
                android:onClick="btnDownloadClick"
                android:paddingRight="20dp"
                android:text="@string/clip" />

            <Button
                android:id="@+id/btnExhibitionClip"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnClip"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/margin_top_et"
                android:drawableRight="@drawable/ic_baseline_get_app_24"
                android:onClick="btnDownloadClick"
                android:paddingRight="20dp"
                android:text="@string/ExhibitionClip" />

        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>